--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,53 @@
-Air Canary
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Air Canary</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="/static/css/main.css" rel="stylesheet" media="screen"> 
+</head>
+<body>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="navbar-inner">
+            <div class="container">
+                <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="brand" href="/">Air Canary</a>
+                <div class="nav-collapse collapse">
+                    <ul class="nav">
+                    <li class="active">
+                        <a href="/">Home</a>
+                    </li>
+                    <li>
+                        <a href="/api">Get started</a>
+                    </li>
+                    <li class="">
+                        <a href="/about">About</a>
+                    </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <header class="jumbotron subhead" id="overview">
+        <div class="container">
+            <h1>Air Canary</h1>
+            <p class="lead">Real-time Air Quality Updates</p>
+        </div>
+    </header>
+    <div class="container">
+        <div class="row">
+            <div class="page-header">
+                <h1>Real-time Air Quality Reports</h1>
+            </div>
+<p class="lead">Before downloading, be sure to have a code editor (we recommend <a href="http://sublimetext.com/2">Sublime Text 2</a>) and some working knowledge of HTML and CSS. We won't walk through the source files here, but they are available for download. We'll focus on getting started with the compiled Bootstrap files.</p>
+        </div>
+    </div>
+    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+</body>
+</html>
