Sites page, tab

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,10 @@
                         <a href="/">Home</a>
                     </li>
                     <li>
-                        <a href="/api">Get started</a>
+                        <a href="/site">Data</a>
+                    </li>
+                    <li>
+                        <a href="/api">Api</a>
                     </li>
                     <li class="">
                         <a href="/about">About</a>
