Fixed typo on wind direction

--- a/templates/site.html
+++ b/templates/site.html
@@ -39,7 +39,7 @@
                         <td>{{ d.temperature }}</td>
                         <td>{{ d.relative_humidity }}</td>
                         <td>{{ d.wind_speed }}</td>
-                        <td>{{ d.wind_diretion }}</td>
+                        <td>{{ d.wind_direction }}</td>
                         <td>{{ d.co }}</td>
                         <td>{{ d.solar_radiation }}</td>
                     </tr>
