--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,8 @@
     <!-- Bootstrap -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="/static/css/main.css" rel="stylesheet" media="screen"> 
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script>
+    <script src="/static/js/ac.js"></script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
