--- a/templates/ng/index.html
+++ b/templates/ng/index.html
@@ -42,7 +42,7 @@
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
-
+        <div ng-view></div>
 </div><!-- content -->
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
