--- a/templates/ng/index.html
+++ b/templates/ng/index.html
@@ -25,13 +25,7 @@
                 <li class="dropdown active">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Data <b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/site/slc">SLC</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li class="divider"></li>
-                        <li class="dropdown-header">Nav header</li>
-                        <li><a href="#">Separated link</a></li>
-                        <li><a href="#">One more separated link</a></li>
+                        <li ng-repeat="s in sites"><a href="/#/site/{[{s.code}]}">{[{s.name}]}</a></li>
                     </ul>
                 </li>
                 <li><a href="/api">API</a></li>
