API docs started

--- a/templates/ng/home.html
+++ b/templates/ng/home.html
@@ -1,14 +1,14 @@
-    <header class="jumbotron subhead" id="overview">
-        <div class="container">
-            <h1>Air Canary</h1>
-            <p class="lead">Real-time Air Quality Updates</p>
-        </div>
-    </header>
+<header class="jumbotron subhead" id="overview">
     <div class="container">
-        <div class="row">
-            <div class="page-header">
-                <h1>Real-time Air Quality Reports</h1>
-            </div>
-<p class="lead">Before downloading, be sure to have a code editor (we recommend <a href="http://sublimetext.com/2">Sublime Text 2</a>) and some working knowledge of HTML and CSS. We won't walk through the source files here, but they are available for download. We'll focus on getting started with the compiled Bootstrap files.</p>
-        </div>
+        <h1>Air Canary</h1>
+        <p class="lead">Real-time Air Quality Updates</p>
     </div>
+</header>
+<div class="container">
+    <div class="row">
+        <div class="page-header">
+            <h1>Real-time Air Quality Reports</h1>
+        </div>
+        <p class="lead">Air Canary is currently under development.  We plan to have it running properly by November 2013.</p>
+    </div>
+</div>
