--- a/templates/ng/index.html
+++ b/templates/ng/index.html
@@ -28,11 +28,11 @@
                         <li ng-repeat="s in sites"><a href="/#/site/{[{s.code}]}">{[{s.name}]}</a></li>
                     </ul>
                 </li>
-                <li><a href="/api">API</a></li>
+                <li><a href="/#/api">API</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/about">About</a></li>
-                    <li><a href="/contact">Contact</a></li>
+                    <li><a href="/#/about">About</a></li>
+                    <li><a href="/#/contact">Contact</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
