--- a/templates/ng/index.html
+++ b/templates/ng/index.html
@@ -4,9 +4,9 @@
     <title>Air Canary</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">
-    <link href="/static/css/main.css" rel="stylesheet" media="screen"> 
+    <!--<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">-->
+    <link rel="stylesheet" href="/static/css/bootstrap.css"/>
+    <link href="/static/css/main.css" rel="stylesheet" media="screen"/> 
 </head>
 <body>
     <div class="container" ng-controller="MainCntl" >
