--- a/templates/ng/about.html
+++ b/templates/ng/about.html
@@ -2,6 +2,9 @@
     <div class="row">
         <div class="page-header">
             <h1>About Air Canary</h1>
+
+            <p>Air Canary was started in 2013 to provide up-to-date air quality data through an easy-to-use website and mobile apps.</p>
+            <p>Currently, Air Canary provides data for areas throughout Utah and plans to expand its coverage in the near future.</p>
         </div>
     </div>
 </div>
