--- a/templates/ng/site.html
+++ b/templates/ng/site.html
@@ -69,5 +69,8 @@
                 </table>
                 </div><!-- table-responsive -->
 
+                <h2>Graph</h2>
+                <sample-graph></sample-graph>
+
         </div>
     </div>
