--- a/templates/ng/index.html
+++ b/templates/ng/index.html
@@ -37,7 +37,14 @@
             </div><!--/.nav-collapse -->
         </div>
         <div ng-view></div>
-</div><!-- content -->
+
+        <footer>
+            <div class="container">
+                <div class="row">&copy; 2013</div>
+            </div>
+        </footer>
+    </div><!-- content -->
+
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script>
