--- a/templates/ng/contact.html
+++ b/templates/ng/contact.html
@@ -2,6 +2,8 @@
     <div class="row">
         <div class="page-header">
             <h1>Contact Us</h1>
+
+            <p>Feel free to contact me at jonstjohn -at- gmail.</p>
         </div>
     </div>
 </div>
