Graph directive working with data

--- a/templates/ng/site.html
+++ b/templates/ng/site.html
@@ -69,8 +69,9 @@
                 </table>
                 </div><!-- table-responsive -->
 
-                <h2>Graph</h2>
-                <sample-graph></sample-graph>
+                <h2>Hourly PM 2.5</h2>
+
+                <sample-graph val="data"></sample-graph>
 
         </div>
     </div>
