--- a/bootstrap/custom-variables.less
+++ b/bootstrap/custom-variables.less
@@ -2,6 +2,12 @@
 // Variables
 // --------------------------------------------------
 
+// http://www.colourlovers.com/palette/1233869/Graces_Quest
+@al3:                   #6F5791; // purple
+@troubled-seas:         #5E8C6F; // green
+@quest-canary:          #F0C866; // yellow
+@rioma-orange:          #DC9C5E; // orange
+@quest-cherry:          #DC4358; // red
 
 // Global values
 // --------------------------------------------------
@@ -18,11 +24,11 @@
 // Brand colors
 // -------------------------
 
-@brand-primary:         #f0dd32; // #428bca;
-@brand-success:         #5cb85c;
-@brand-warning:         #f0ad4e;
-@brand-danger:          #d9534f;
-@brand-info:            #5bc0de;
+@brand-primary:         @quest-canary; // #f0dd32; // #428bca;
+@brand-success:         @troubled-seas; // #5cb85c;
+@brand-warning:         @rioma-orange; // #f0ad4e;
+@brand-danger:          @quest-cherry; // #d9534f;
+@brand-info:            @al3; // #5bc0de;
 
 // Scaffolding
 // -------------------------
@@ -239,15 +245,15 @@
 @navbar-height:                    50px;
 @navbar-margin-bottom:             @line-height-computed;
 @navbar-default-color:             #777;
-@navbar-default-bg:                #f8f8f8;
+@navbar-default-bg:                @brand-primary; // #f8f8f8;
 @navbar-default-border:            darken(@navbar-default-bg, 6.5%);
 @navbar-border-radius:             @border-radius-base;
 @navbar-padding-horizontal:        floor(@grid-gutter-width / 2);
 @navbar-padding-vertical:          ((@navbar-height - @line-height-computed) / 2);
 
 // Navbar links
-@navbar-default-link-color:                #777;
-@navbar-default-link-hover-color:          #333;
+@navbar-default-link-color:                #333; // #777;
+@navbar-default-link-hover-color:          #777; // #333;
 @navbar-default-link-hover-bg:             transparent;
 @navbar-default-link-active-color:         #555;
 @navbar-default-link-active-bg:            darken(@navbar-default-bg, 6.5%);
