--- a/templates/ng/home.html
+++ b/templates/ng/home.html
@@ -1,14 +1,16 @@
-<header class="jumbotron subhead" id="overview">
-    <div class="container">
-        <h1>Air Canary</h1>
-        <p class="lead">Real-time Air Quality Updates</p>
-    </div>
-</header>
-<div class="container">
-    <div class="row">
-        <div class="page-header">
-            <h1>Real-time Air Quality Reports</h1>
+<div style="padding-top: 30px">
+    <div class="jumbotron">
+        <div class="container">
+            <h1>Air Canary</h1>
+            <p class="lead">Real-time Air Quality Updates</p>
         </div>
-        <p class="lead">Air Canary is currently under development.  We plan to have it running properly by November 2013.</p>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="page-header">
+                <h1>Real-time Air Quality Reports</h1>
+            </div>
+            <p class="lead">Air Canary is currently under development.  We plan to have it running properly by November 2013.</p>
+        </div>
     </div>
 </div>
