--- a/templates/ng/site.html
+++ b/templates/ng/site.html
@@ -15,7 +15,7 @@
 
                         <div class="row">
                             <div ng-repeat="f in forecast" class="col-md-4" style="padding: 10px">
-                                <div style="background-color: {[{f.color}]}; width: 100%; color: #fff">
+                                <div class="forecast-{[{ f.color|lowercase }]}" style="width: 100%; color: #fff">
                                     <div style="padding: 10px" class="row">
                                         <div class="col-md-6">{[{ f.date }]}</div>
                                         <div class="col-md-6" style="text-align: right">{[{ f.description }]}</div>  
