Tweak less, ozone

--- a/bootstrap/custom-bootstrap.less
+++ b/bootstrap/custom-bootstrap.less
@@ -2,3 +2,4 @@
 @import "custom-variables.less";
 @import "custom-other.less";
 @import "../../bower_components/bootstrap/less/utilities.less";
+@import "main.less";
