--- a/bootstrap/custom-variables.less
+++ b/bootstrap/custom-variables.less
@@ -9,6 +9,12 @@
 @rioma-orange:          #DC9C5E; // orange
 @quest-cherry:          #DC4358; // red
 
+@brand-purple:          @al3;
+@brand-green:           @troubled-seas;
+@brand-yellow:          @quest-canary;
+@brand-orange:          @rioma-orange;
+@brand-red:             @quest-cherry;
+
 // Global values
 // --------------------------------------------------
 
@@ -24,11 +30,11 @@
 // Brand colors
 // -------------------------
 
-@brand-primary:         @quest-canary; // #f0dd32; // #428bca;
-@brand-success:         @troubled-seas; // #5cb85c;
-@brand-warning:         @rioma-orange; // #f0ad4e;
-@brand-danger:          @quest-cherry; // #d9534f;
-@brand-info:            @al3; // #5bc0de;
+@brand-primary:         @brand-yellow; // @quest-canary; // #f0dd32; // #428bca;
+@brand-success:         @brand-green; // @troubled-seas; // #5cb85c;
+@brand-warning:         @brand-orange; // @rioma-orange; // #f0ad4e;
+@brand-danger:          @brand-red; // @quest-cherry; // #d9534f;
+@brand-info:            @brand-purple; // @al3; // #5bc0de;
 
 // Scaffolding
 // -------------------------
