--- a/templates/ng/site.html
+++ b/templates/ng/site.html
@@ -31,7 +31,16 @@
                         <h2 class="panel-title">PM 2.5 - Past 24 hours</h2>
                     </div>
                     <div class="panel-body">
-                        <sample-graph val="data"></sample-graph>
+                        <sample-graph val="data" type="pm25"></sample-graph>
+                    </div>
+                </div>
+
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h2 class="panel-title">Ozone - Past 24 hours</h2>
+                    </div>
+                    <div class="panel-body">
+                        <sample-graph val="data" type="ozone"></sample-graph>
                     </div>
                 </div>
 
