--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,4 @@
-.forecast-green { background-color: #5E8C6F }
+/*.forecast-green { background-color: #5E8C6F }
 .forecast-yellow { background-color: #F0C866 }
 .forecast-red { background-color: #DC4358 }
+*/
