Home graph, api formatting, units

--- a/bootstrap/custom-variables.less
+++ b/bootstrap/custom-variables.less
@@ -3,6 +3,7 @@
 // --------------------------------------------------
 
 // http://www.colourlovers.com/palette/1233869/Graces_Quest
+/*
 @al3:                   #6F5791; // purple
 @troubled-seas:         #5E8C6F; // green
 @quest-canary:          #F0C866; // yellow
@@ -14,6 +15,8 @@
 @brand-yellow:          @quest-canary;
 @brand-orange:          @rioma-orange;
 @brand-red:             @quest-cherry;
+*/
+@import "colors/graces-quest.less";
 
 // Global values
 // --------------------------------------------------
