--- a/bootstrap/main.less
+++ b/bootstrap/main.less
@@ -2,6 +2,7 @@
 .forecast-yellow { background-color: @brand-yellow }
 .forecast-red { background-color: @brand-red }
 
+.bar-none { fill: #ccc }
 .bar-green { fill: @brand-green }
 .bar-yellow { fill: @brand-yellow }
 .bar-orange { fill: @brand-orange }
