--- a/templates/ng/site.html
+++ b/templates/ng/site.html
@@ -28,19 +28,19 @@
 
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h2 class="panel-title">PM 2.5 - Past 24 hours</h2>
+                        <h2 class="panel-title">PM 2.5 - &micro;g/m<sup>3</sup>- Past 24 hours</h2>
                     </div>
-                    <div class="panel-body">
-                        <sample-graph val="data" type="pm25"></sample-graph>
+                    <div class="panel-body" style="overflow: scroll">
+                        <sample-graph val="data" width="1080" height="300" type="pm25"></sample-graph>
                     </div>
                 </div>
 
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h2 class="panel-title">Ozone - Past 24 hours</h2>
+                        <h2 class="panel-title">Ozone - PPM - Past 24 hours</h2>
                     </div>
-                    <div class="panel-body">
-                        <sample-graph val="data" type="ozone"></sample-graph>
+                    <div class="panel-body" style="overflow: scroll">
+                        <sample-graph val="data" width="1080" height="300" type="ozone"></sample-graph>
                     </div>
                 </div>
 
