--- a/templates/ng/index.html
+++ b/templates/ng/index.html
@@ -18,6 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <div class="pull-left" style="padding: 5px"><a href="#"><img src="/static/img/canary1.png" style="width: 40px"/></a></div>
                 <a class="navbar-brand" href="#">Air Canary</a>
             </div>
             <div class="navbar-collapse collapse">
