--- a/templates/ng/contact.html
+++ b/templates/ng/contact.html
@@ -3,7 +3,33 @@
         <div class="page-header">
             <h1>Contact Us</h1>
 
-            <p>Feel free to contact me at jonstjohn -at- gmail.</p>
+            <p>Feel free to contact me at jonstjohn -at- gmail or fill out the form below.</p>
+
+            <form role="form" class="form-horizontal" style="margin-top: 30px" name="contactForm" id="contactForm">
+                <div class="form-group">
+                    <label for="name" class="col-lg-2 control-label">Name</label>
+                    <div class="col-lg-4">
+                        <input type="text" class="form-control" id="name" name="name" placeholder="Name" ng-model="contactName" required>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="email" class="col-lg-2 control-label">Email</label>
+                    <div class="col-lg-4">
+                        <input type="email" class="form-control" id="email" email="name" placeholder="Email" ng-model="contactEmail" required>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="comment" class="col-lg-2 control-label">Comment</label>
+                    <div class="col-lg-4">
+                        <textarea name="comment" id="comment" class="form-control" rows="5" ng-model="contactComment" required></textarea>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-lg-offset-2 col-lg-10">
+                      <button type="submit" class="btn btn-default">Submit</button>
+                    </div>
+                  </div>
+            </form>
         </div>
     </div>
 </div>
