--- a/templates/ng/index.html
+++ b/templates/ng/index.html
@@ -55,6 +55,7 @@
     <script src="/static/js/moment.min.js"></script>
     <script src="/static/js/moment-timezone.min.js"></script>
     <script src="/static/js/moment-timezone-data.js"></script>
+    <script src="/static/js/geoPosition.js"></script>
     <script src="/static/js/acng.js"></script>
 </body>
 </html>
