--- a/templates/ng/site.html
+++ b/templates/ng/site.html
@@ -47,27 +47,6 @@
                     </div>
                 </div>
 
-                <div class="table-responsive">
-                <table class="table table-condensed table-striped">
-                <thead>
-                <tr>
-                    <th>Date</th>
-                    <th>Color</th>
-                    <th>Description</th>
-                    <th>Published</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr ng-repeat="f in forecast">
-                    <td>{[{f.date}]}</td>
-                    <td>{[{f.color}]}</td>
-                    <td>{[{f.description}]}</td>
-                    <td>{[{f.published}]}</td>
-                </tr>
-                </tbody>
-                </table>
-                </div><!-- table-responsive -->
-
                 <h2>Data</h2>
                 <div class="table-responsive">
                 <table class="table table-condensed table-striped">
@@ -83,7 +62,6 @@
                     <th>Temp</th>
                     <th>Humidity</th>
                     <th>Wind speed</th>
-                    <th>Wind dir</th>
                     <th>CO</th>
                     <th>Solar Radiation</th>
                 </tr>
@@ -91,16 +69,15 @@
                 <tbody>
                     <tr ng-repeat="d in data">
                         <td>{[{ d.observed | date:'short' }]}</td>
-                        <td class="ozone">{[{ d.ozone }]}</td>
-                        <td>{[{ d.ozone_8hr_avg }]}</td>
-                        <td class="pm25">{[{ d.pm25 }]}</td>
-                        <td>{[{ d.pm25_24hr_avg }]}</td>
-                        <td>{[{ d.nox }]}</td>
-                        <td>{[{ d.no2 }]}</td>
-                        <td>{[{ d.temperature }]}</td>
-                        <td>{[{ d.relative_humidity }]}</td>
-                        <td>{[{ d.wind_speed }]}</td>
-                        <td>{[{ d.wind_direction }]}</td>
+                        <td class="ozone">{[{ d.ozone }]} &micro;g/m<sup>3</sup></td>
+                        <td>{[{ d.ozone_8hr_avg }]} &micro;g/m<sup>3</sup></td>
+                        <td class="pm25">{[{ d.pm25 }]} ppm</td>
+                        <td>{[{ d.pm25_24hr_avg }]} ppm</td>
+                        <td>{[{ d.nox }]} ppm</td>
+                        <td>{[{ d.no2 }]} ppm</td>
+                        <td>{[{ d.temperature }]}&deg;</td>
+                        <td>{[{ d.relative_humidity }]}%</td>
+                        <td>{[{ d.wind_speed }]} mph {[{ d.wind_direction | dir }]}</td>
                         <td>{[{ d.co }]}</td>
                         <td>{[{ d.solar_radiation }]}</td>
                     </tr>
