Started loading screen

--- a/templates/ng/home.html
+++ b/templates/ng/home.html
@@ -11,7 +11,7 @@
                     <div class="panel-heading">
                         <h2 class="panel-title">PM 2.5 - Salt Lake City</h2>
                     </div>
-                    <div class="panel-body">
+                    <div class="panel-body" style="overflow: scroll">
                         <sample-graph val="data" width="400" height="100" type="pm25" nolegend=1></sample-graph>
                     </div>
                 </div>
