Design tweaks on site top

--- a/templates/ng/site.html
+++ b/templates/ng/site.html
@@ -1,18 +1,18 @@
     <div class="container">
-        <div class="row" style="margin-top: 10px">
-                <div class="" style="padding: 2px; width: 50px; height: 40px; float: left; margin: 3px" ng-repeat="s in sites">
-                    <div style="color: #fff; text-align:center; line-height: 40px; width: 50px; height: 40px; cursor: pointer" ng-click="loadSite(s.code)" class="forecast-green">{[{ s.name | boxName }]}</div>
-                </div>
-        </div>
-        <div class="row">
+        <div class="row" style="margin-bottom: 5px">
             <div class="col-md-12">
-                <div class="page-header">
-                    <div style="float: right">  
-                        <select class="form-control" name="code" id="code" ng-model="code" ng-options="s.code as s.name for s in sites"></select>
+                <div style="margin-top: 40px; margin-bottom: 20px">
+                    <div class="pull-right">  
+                        <div class="" style="width: 50px; height: 40px; float: left; margin-left: 5px; padding: 2px" ng-repeat="s in sites">
+                            <div style="color: #fff; text-align:center; line-height: 36px; width: 50px; height: 36px; cursor: pointer" ng-click="loadSite(s.code)" class="forecast-green">{[{ s.name | boxName }]}</div>
+                        </div>
+                        <!--<select class="form-control" name="code" id="code" ng-model="code" ng-options="s.code as s.name for s in sites"></select>-->
                     </div>
-                    <h1>{[{ name }]}</h1>
+                    <div class="pull-left" style="height: 40px; line-height: 40px; font-weight: bold; font-size: 24px; margin-left: 5px">{[{ name }]}</div>
                 </div>
             </div>
+        </div>
+        <div class="row">
             <div class="col-md-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">
@@ -22,7 +22,7 @@
 
                         <div class="row">
                             <div ng-repeat="f in forecast" class="col-xs-4" style="padding: 5px">
-                                <div class="forecast-{[{ f.color|lowercase }]}" style="width: 100%; color: #fff">
+                                <div class="forecast-{[{ f.description | forecastColor }]}" style="width: 100%; color: #fff">
                                     <div style="padding: 10px" class="row">
                                         <div class="col-xs-6">{[{ f.date|date:'EEEE' }]}</div>
                                         <div class="col-xs-6 hidden-xs" style="text-align: right">{[{ f.description }]}</div>  
