--- a/templates/ng/site.html
+++ b/templates/ng/site.html
@@ -1,5 +1,5 @@
     <div class="container">
-        <div class="row" style="margin-bottom: 5px">
+        <div class="row" style="margin-bottom: 10px">
             <div class="col-md-12">
                 <div style="margin-top: 40px; margin-bottom: 20px">
                     <div class="pull-right">  
@@ -13,7 +13,26 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-6">
+                <div class="panel panel-default" ng-repeat="d in data" ng-show="$first">
+                    <div class="panel-heading">
+                        <h2 class="panel-title">Current Conditions<div class="pull-right">{[{ d.observed | date: 'shortTime' }]}</div></h2>
+                    </div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-3">Temp:</div><div class="col-xs-3">{[{ d.temperature | number: 0 }]}&deg;F</div>
+                            <div class="col-xs-3">Humidity:</div>
+                            <div class="col-xs-3">{[{ d.relative_humidity }]}<span ng-show="d.relative_humidity">%</span><span ng-hide="d.relative_humidity">--</span></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-3">PM 2.5:</div><div class="col-xs-3">{[{ d.pm25 }]}<span ng-show="d.pm25"> &micro;g/m<sup>3</sup></span></div>
+                            <div class="col-xs-3">Ozone:</div>
+                            <div class="col-xs-3">{[{ d.ozone }]}<span ng-show="d.ozone"> ppm</span><span ng-hide="d.ozone">--</span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h2 class="panel-title">Air Quality Forecast</h2>
@@ -33,6 +52,8 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="row">
             <div class="col-md-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">
@@ -74,10 +95,10 @@
                 <tbody>
                     <tr ng-repeat="d in data">
                         <td>{[{ d.observed | date:'short' }]}</td>
-                        <td class="ozone">{[{ d.ozone }]}<span ng-show="d.ozone"> &micro;g/m<sup>3</sup></span></td>
-                        <td>{[{ d.ozone_8hr_avg }]}<span ng-show="d.ozone_8hr_avg"> &micro;g/m<sup>3</sup></span></td>
-                        <td class="pm25">{[{ d.pm25 }]}<span ng-show="d.pm25"> ppm</span></td>
-                        <td>{[{ d.pm25_24hr_avg }]}<span ng-show="d.pm25_24hr_avg"> ppm</span></td>
+                        <td class="ozone">{[{ d.ozone }]}<span ng-show="d.ozone"> ppm</span></td>
+                        <td>{[{ d.ozone_8hr_avg }]}<span ng-show="d.ozone_8hr_avg"> ppm</span></td>
+                        <td class="pm25">{[{ d.pm25 }]}<span ng-show="d.pm25"> &micro;g/m<sup>3</sup></span></td>
+                        <td>{[{ d.pm25_24hr_avg }]}<span ng-show="d.pm25_24hr_avg"> &micro;g/m<sup>3</sup></span></td>
                         <td>{[{ d.nox }]}<span ng-show="d.nox"> ppm</span></td>
                         <td>{[{ d.no2 }]}<span ng-show="d.no2"> ppm</span></td>
                         <td>{[{ d.temperature | number:0 }]}<span ng-show="d.temperature">&deg;</span></td>
