--- a/templates/ng/site.html
+++ b/templates/ng/site.html
@@ -1,3 +1,10 @@
+    <style>
+        .line { fill: none; stroke: steelblue; stroke-width: 1.5px; }
+        .axis path,
+        .axis line { fill: none; stroke: #000; shape-rendering: crispEdges; }
+        .x.axis path { display: none; }
+    </style>
+
     <div class="container">
         <div class="row" style="margin-bottom: 10px">
             <div class="col-md-12">
@@ -72,6 +79,16 @@
                     </div>
                     <div class="panel-body" style="overflow: scroll">
                         <sample-graph val="data" width="1040" height="300" type="ozone"></sample-graph>
+                    </div>
+                </div>
+
+
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h2 class="panel-title">Ozone<div class="pull-right">Parts Per Million (PPM)</h2>
+                    </div>
+                    <div class="panel-body" style="overflow: scroll">
+                        <line-graph val="data" width="1040" height="300" type="ozone"></sample-graph>
                     </div>
                 </div>
 
