Added mouseover for line graph

--- a/templates/ng/site.html
+++ b/templates/ng/site.html
@@ -3,6 +3,8 @@
         .axis path,
         .axis line { fill: none; stroke: #000; shape-rendering: crispEdges; }
         .x.axis path { display: none; }
+        .overlay { fill: none; pointer-events: all; }
+        .focus circle { fill: none; stroke: steelblue; }
     </style>
 
     <div class="container">
