--- a/templates/ng/index.html
+++ b/templates/ng/index.html
@@ -24,7 +24,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li class="dropdown active">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Data <b class="caret"></b></a>
+                        <a href="" class="dropdown-toggle" data-toggle="dropdown">Data <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li ng-repeat="s in sites"><a href="/#/site/{[{s.code}]}">{[{s.name}]}</a></li>
                         </ul>
@@ -50,7 +50,8 @@
 
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-route.min.js"></script>
     <script src="/static/js/d3.v3.min.js" charset="utf-8"></script>
     <script src="/static/js/moment.min.js"></script>
     <script src="/static/js/moment-timezone.min.js"></script>
